updated to latest matomo and added nginx as reverse proxy

--- a/examples/compose/docker-compose.yml
+++ b/examples/compose/docker-compose.yml
@@ -1,81 +1,48 @@
 version: "3.5"
 
 services:
-  db:
-    image: mariadb:10.5
-    command:
-      - "--character-set-server=utf8mb4"
-      - "--collation-server=utf8mb4_unicode_ci"
-      - "--max_allowed_packet=256M"
-    volumes:
-      - "db:/var/lib/mysql"
-    environment:
-      - "MYSQL_ALLOW_EMPTY_PASSWORD=yes"
-      - "MYSQL_DATABASE=matomo"
-      - "MYSQL_USER=matomo"
-      - "MYSQL_PASSWORD=asupersecretpassword"
+  matomo-db:
+    image: mariadb
+    container_name: "matomo-db"
+    command: 
+      - "--max_allowed_packet=64M"
     restart: always
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+    volumes:
+      - "data:/var/lib/mysql"
+    env_file:
+      - "./db.env"
 
-  redis:
+  matomo-redis:
     image: redis:4.0-alpine
-    restart: always
-
-  msmtpd:
-    image: crazymax/msmtpd:latest
-    env_file:
-      - "./msmtpd.env"
-    environment:
-      - "TZ"
-    restart: always
-
-  geoip-updater:
-    image: crazymax/geoip-updater:latest
-    volumes:
-      - "geoip-updater:/data"
-    env_file:
-      - "./geoip-updater.env"
-    environment:
-      - "TZ"
+    container_name: "matomo-redis"
     restart: always
 
   matomo:
-    image: crazymax/matomo:latest
+    image: matomo:fpm-alpine
+    container_name: matomo
     depends_on:
-      - db
-      - redis
-      - msmtpd
-    ports:
-      - target: 8000
-        published: 8000
-        protocol: tcp
+      - matomo-db
+      - matomo-redis
     volumes:
-      - "matomo:/data"
-      - "geoip-updater:/data/geoip"
+      - "matomo:/var/www/html"
     env_file:
-      - "./matomo.env"
+      - "./db.env"
     environment:
-      - "TZ"
+      - MATOMO_DATABASE_HOST=db
     restart: always
 
-  cron:
-    image: crazymax/matomo:latest
-    depends_on:
-      - matomo
-    volumes:
-      - "matomo:/data"
-      - "geoip-updater:/data/geoip"
-    env_file:
-      - "./matomo.env"
-    environment:
-      - "TZ"
-      - "SIDECAR_CRON=1"
-      - "CRON_ARCHIVE=0 * * * *"
-      - "ARCHIVE_OPTIONS=--concurrent-requests-per-website=3"
-    healthcheck:
-      disable: true
+  matomo-proxy:
+    image: nginx:alpine
+    container_name: matomo-proxy
     restart: always
+    volumes:
+      - matomo:/var/www/html:ro
+      - ./docker/matomo-proxy/matomo.nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    ports:
+      - 1280:1280
 
 volumes:
-  db:
-  geoip-updater:
+  data:
   matomo:
